# mas-crackmes

./: .gitignore  .travis.yml  README.md
Android/Level1/app/: build.gradle  proguard-rules.pro
Android/Level1/app/src/main/: AndroidManifest.xml
Android/Level1/app/src/main/res/layout/: activity_main.xml
Android/Level1/app/src/main/res/values/: strings.xml
Android/Level1/gradle/wrapper/: gradle-wrapper.properties
Android/Level2/app/: CMakeLists.txt  build.gradle
Android/Level2/app/src/main/: AndroidManifest.xml
Android/Level2/app/src/main/cpp/: foo.cpp
Android/Level2/app/src/main/res/layout/: activity_main.xml
Android/Level2/app/src/main/res/values/: strings.xml
Android/Level2/gradle/wrapper/: gradle-wrapper.properties
Android/Level3/app/: CMakeLists.txt  build.gradle  secrethint.txt
Android/Level3/app/release/: app-release.apk
Android/Level3/app/src/main/: AndroidManifest.xml
Android/Level3/app/src/main/cpp/: foo.cpp  native-lib.cpp
Android/Level3/app/src/main/res/layout/: activity_main.xml
Android/Level3/app/src/main/res/values/: strings.xml
Android/Level3/gradle/wrapper/: gradle-wrapper.properties
Android/Level4/: settings.gradle
Android/Level4/app/: build.gradle  proguard-rules.pro
Android/Level4/app/src/main/: AndroidManifest.xml
Android/Level4/app/src/main/c/: CMakeLists.txt  mylibc.h  native-lib.c  syscalls.h
Android/Level4/app/src/main/c/mbedtls/include/mbedtls/: config.h
Android/Level4/app/src/main/c/rootdetector/: rootdetector.h
Android/Level4/app/src/main/c/swcrypto/: pbkdf2.h
Android/Level4/app/src/main/c/whitebox/: README.md  RandMat.cpp  RandMat.h  aes.c  aes.h  aes_table.c  genTables.cpp  tables.h
Android/Level4/gradle/wrapper/: gradle-wrapper.properties
Android/License1/: Makefile  keygen.c  validate.c
Android/License2/: Makefile  base32.c  base32.h  keygen.c  validate.c
iOS/Level1/UnCrackable Level 1.xcodeproj/: project.pbxproj
iOS/Level1/UnCrackable Level 1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/Level1/UnCrackable Level 1.xcodeproj/project.xcworkspace/xcuserdata/berndt.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Level1/UnCrackable Level 1.xcodeproj/xcuserdata/berndt.xcuserdatad/xcschemes/: UnCrackable L1.xcscheme  xcschememanagement.plist
iOS/Level1/UnDebuggable/: AppDelegate.h  Info.plist  ViewController.h  ViewController.m  main.m
iOS/Level1/UnDebuggable/Base.lproj/: Main.storyboard
iOS/Level2/UnCrackable Level 2.xcodeproj/: project.pbxproj
iOS/Level2/UnCrackable Level 2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/Level2/UnCrackable Level 2.xcodeproj/project.xcworkspace/xcuserdata/berndt.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Level2/UnCrackable Level 2.xcodeproj/project.xcworkspace/xcuserdata/razr.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Level2/UnCrackable Level 2.xcodeproj/xcuserdata/berndt.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/Level2/UnCrackable Level 2.xcodeproj/xcuserdata/berndt.xcuserdatad/xcschemes/: UnCrackable Level 2.xcscheme  xcschememanagement.plist
iOS/Level2/UnCrackable Level 2.xcodeproj/xcuserdata/razr.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/Level2/UnCrackable Level 2.xcodeproj/xcuserdata/razr.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/Level2/UnDebuggable/: AppDelegate.m  Info.plist  NSString+Base64.m  ViewController.h  ViewController.m
iOS/Level2/UnDebuggable/Base.lproj/: Main.storyboard
iOS/Level2/UnDebuggable/Level1.ipa/: UnDebuggable.ipa
(+22 files in other folders)
